# apertium-fr-es

./: .gitattributes  .gitignore  Makefile.am  README  TODO  apertium-fr-es.fr-es.dix  apertium-fr-es.fr.metadix  apertium-fra-spa.fra-spa.dix  apertium-fra-spa.fra.metadix  apertium-fra-spa.post-spa.dix  apertium-fra-spa.spa.dix  configure.ac  fra-spa-unsupervised.make  modes.xml  spa-fra-supervised.make  spa-fra-unsupervised.make  testvoc-apertium2-utf
dev/: inconsistency.sh  testvoc.sh
fra-tagger-data/: README
spa-tagger-data/: README
test/: es-fr-input.txt  es-fr-interchunk-expected.txt  es-fr-lex-expected.txt  es-fr-tagger-expected.txt  fr-es-biltrans-expected.txt  fr-es-chunker-expected.txt  fr-es-interchunk-expected.txt  fr-es-postchunk-expected.txt  fr-es-postgen-expected.txt  fr-es-pretransfer-expected.txt  fra-spa-generator-expected.txt  fra-spa-input.txt  fra-spa-morph-expected.txt  fra-spa-postgen-gold.txt  spa-fra-generator-expected.txt  spa-fra-morph-expected.txt  spa-fra-postchunk-expected.txt  spa-fra-postgen-expected.txt  spa-fra-postgen-gold.txt  tests.json
